--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "axios": "^0.19.1",
     "cookie_js": "^1.3.0",
     "core-js": "^3.4.4",
+    "echarts": "^4.6.0",
     "element-ui": "^2.13.0",
     "eslint-plugin-html": "^6.0.0",
     "js-sha1": "^0.6.0",
     "sha1": "^1.1.1",
     "style-loader": "^1.1.2",
     "svg-sprite-loader": "^4.1.6",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.10",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
